--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Boop Boop
+title: Hi Universe
 email: angeladanwang@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Where I write about things that are relatively relevant
+  A blog about things
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://angelawang.co" # the base hostname & protocol for your site
 github_username:  vaticancameo
